# distributed-blog-learn

./: Cargo.toml  README.md  justfile
admin-srv/: Cargo.toml
admin-srv/src/: main.rs  server.rs
blog-auth/: Cargo.toml
blog-auth/src/: err.rs  lib.rs
blog-backend/: Cargo.toml
blog-backend/src/: main.rs  model.rs
blog-backend/src/form/: auth.rs  cate.rs  mod.rs
blog-backend/src/handler/: auth.rs  cate.rs  mod.rs
blog-backend/src/middleware/: auth.rs  mod.rs
blog-frontend/: Cargo.toml
blog-frontend/src/: handler.rs  main.rs  model.rs
blog-proto/: Cargo.toml  build.rs
blog-proto/proto/: category.proto
blog-proto/src/: lib.rs  pb.rs
blog-types/: Cargo.toml
blog-types/src/: lib.rs
blog-utils/: Cargo.toml
blog-utils/src/: password.rs
category-srv/: Cargo.toml
category-srv/src/: main.rs  server.rs
category-srv/tests/: category_src_tests.rs
sql/: blog.sql
topic-srv/: Cargo.toml
topic-srv/src/: main.rs  server.rs
